<resources>
    <string name="app_name">Film Recomender</string>
    <string name="poster">Poster</string>
    <string name="averageRate">Оценка пользователей: %d</string>
    <string name="releaseDate">Дата выхода: %s</string>
    <string name="runtime">Длительность: %d</string>
    <string name="filmGenres">Жанр: %s</string>
    <string name="title_home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_title">Главная</string>
    <string name="new_films">Новинки</string>
    <string name="all_new_film">Все</string>
    <string name="release_schedule">График премьер</string>

</resources>